@@ -21,10 +21,10 @@ Class-wise, we have:
   Backup -- a snapshot in time of all a Root's Files and Chunks.
             during the backup, the Target is consulted to see if it
             has chunks before they're re-stored.  The backup upon
-	    completion writes a structured file as described below.
+	        completion writes a structured file as described below.
 
-  DigestDatabase -- the digest database, a property of the Root, acts
-                    mostly as a cache, but is pretty important when
+  DigestCache -- the digest cache, a property of the Root, acts
+            mostly as a cache, but is pretty important when
 		    using encryption.  If you lose the database, all your
 		    files will need to be re-encrypted, as Brackup won't
 		    know if the chunks already exist, as encryption makes
