@@ -1,4 +1,8 @@
 
+  - convert DigestCache from is-a-Dict to has-a-Dict, allow dictionary type
+    to be specified for both DigestCache and InventoryDatabase, add slower/
+    lighter iterator-based Dict::SQLite2, and (test) Dict::Null (Gavin Carr)
+
   - make encryption and chunk storage use filehandles (where possible)
     instead of scalar contents (Kostas Chatzikokolakis)
 
